--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "element-ui": "^1.4.2",
     "font-awesome": "^4.7.0",
     "mint-ui": "^2.2.9",
